--- a/server/package.json
+++ b/server/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node dist/index.js",
-    "build": "npx tsc",
+    "start": "ts-node src/index.ts",
     "dev": "nodemon src/index.ts"
   },
   "keywords": [],
